@@ -266,3 +266,7 @@
 ## Can be texi2any (the default) or makeinfo or a full path to either
 ## MAKEINFO=
 
+## Use these to override curl-config if needed, which it sometimes is
+## for static libs (try curl-config --static-libs)
+## CURL_CPPFLAGS=
+## CURL_LIBS=
